# gradient

./: CMakeLists.txt  README.md  gradient
anemo-package/: anemo.apkg  anemonix.yaml
gradient-package/: anemonix.yaml
include/: CLI.h  Database.h  DependencyResolver.h  DownloadHelper.h  Installer.h  Package.h  Repository.h  ScriptExecutor.h  TarHandler.h  YamlParser.h  cxxopts.h  tools.h
src/: CLI.cpp  Database.cpp  DependencyResolver.cpp  Installer.cpp  Package.cpp  Repository.cpp  ScriptExecutor.cpp  TarHandler.cpp  YamlParser.cpp  main.cpp
tests/arch-mismatch/: anemonix.yaml
tests/conflict-test/: anemonix.yaml
tests/hook-pkg/: anemonix.yaml  install.anemonix
tests/missing-dep/: anemonix.yaml
tests/normal-package/: anemonix.yaml
tests/normal-remove/: anemonix.yaml
tests/normal-remove/package/usr/share/: normal-remove.txt
tests/replace-test/: anemonix.yaml
tests/reverse-base/: anemonix.yaml
tests/reverse-base/package/home/cv2/: test-tool
tests/reverse-dependent/: anemonix.yaml
tests/reverse-dependent/package/home/cv2/: rev-dep.txt
tests/rollback-test/: anemonix.yaml
tests/test-package/: anemonix.yaml
tests/test-package/package/home/cv2/: ANEMO-EPOCH-THREE.txt
